# aikeeper-willie

./: .gitignore  LICENSE  README.md  architecture.md  cat.txt  idea.md  improvements.md  init.sh  log.md  pyproject.toml  ralph  ralph.py  tasks.jsonl  willie  willie.py  working.md
.willie/: idea.md  willie.py  working.md
src/willie/: __init__.py  __main__.py  loop.py
src/willie/templates/: learnings.md  working.md
